[gd_scene load_steps=24 format=2]

[ext_resource path="res://sprites/player_cs50x_final-3.png" type="Texture" id=1]
[ext_resource path="res://scripts/mainmenu.gd" type="Script" id=2]
[ext_resource path="res://sprites/bullet_cs50x_final-1.png" type="Texture" id=3]
[ext_resource path="res://sprites/background_cs50x_final.png" type="Texture" id=4]
[ext_resource path="res://fonts/Minecraft.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=11]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=12]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=13]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=14]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=15]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=16]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=17]
size = 120
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=18]
size = 20
font_data = ExtResource( 5 )

[node name="mainmenu" type="CanvasLayer"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 250.291, 460.051, 274.0, 312.027, 444.465, 331.124, 493.534, 228.158 ],
"_edit_vertical_guides_": [ 279.274, 581.212, 849.693 ]
}

[node name="background" type="Sprite" parent="."]
position = Vector2( 615.319, 232.608 )
scale = Vector2( 106.147, 48.7777 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="panelplayer" type="Panel" parent="."]
modulate = Color( 1, 0.992157, 0.992157, 1 )
margin_left = 287.316
margin_top = 236.398
margin_right = 527.316
margin_bottom = 327.398
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playericon2" type="Sprite" parent="panelplayer"]
modulate = Color( 0.713726, 0.0470588, 0.0470588, 1 )
position = Vector2( 121.929, 106.988 )
scale = Vector2( 8.87378, 7.19069 )
texture = ExtResource( 3 )

[node name="playername" type="LineEdit" parent="panelplayer"]
margin_left = -8.0
margin_top = 51.958
margin_right = 123.0
margin_bottom = 75.958
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_1_playername" type="Label" parent="panelplayer"]
margin_left = -7.71936
margin_top = 23.4745
margin_right = 135.281
margin_bottom = 56.4745
custom_fonts/font = SubResource( 1 )
text = "Player name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_2_color" type="Label" parent="panelplayer"]
margin_left = -7.47192
margin_top = 87.3087
margin_right = 48.5281
margin_bottom = 107.309
custom_fonts/font = SubResource( 2 )
text = "Color:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="color" type="ColorPickerButton" parent="panelplayer"]
margin_left = 52.9607
margin_top = 85.7839
margin_right = 81.9607
margin_bottom = 105.784
flat = true
color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="defaultcolor" type="Button" parent="panelplayer"]
margin_left = 76.4559
margin_top = 189.886
margin_right = 160.456
margin_bottom = 215.886
custom_fonts/font = SubResource( 3 )
text = "Default"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playericon" type="Sprite" parent="panelplayer"]
position = Vector2( 157.293, 63.8196 )
scale = Vector2( 0.671525, 0.588487 )
texture = ExtResource( 1 )

[node name="panelhost" type="Panel" parent="."]
margin_left = 572.694
margin_top = 230.602
margin_right = 810.694
margin_bottom = 316.602
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background_label" type="Sprite" parent="panelhost"]
modulate = Color( 0.713726, 0.0470588, 0.0470588, 1 )
position = Vector2( 120.669, 136.655 )
scale = Vector2( 7.80601, 8.70004 )
texture = ExtResource( 3 )

[node name="label_1_createserver" type="Label" parent="panelhost"]
margin_left = 51.1467
margin_top = 1.74668
margin_right = 194.147
margin_bottom = 21.7467
custom_fonts/font = SubResource( 4 )
text = "Create Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_2_servername" type="Label" parent="panelhost"]
margin_left = 8.29601
margin_top = 25.5105
margin_right = 145.296
margin_bottom = 45.5105
custom_fonts/font = SubResource( 5 )
text = "Server Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_3_port" type="Label" parent="panelhost"]
margin_left = 8.73479
margin_top = 82.6536
margin_right = 56.7348
margin_bottom = 102.654
custom_fonts/font = SubResource( 6 )
text = "Port:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_4_maxconnections" type="Label" parent="panelhost"]
margin_left = 8.92459
margin_top = 149.18
margin_right = 186.925
margin_bottom = 169.18
custom_fonts/font = SubResource( 7 )
text = "Max. Connections:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="servername" type="LineEdit" parent="panelhost"]
margin_left = 7.54057
margin_top = 49.0923
margin_right = 135.54
margin_bottom = 73.0923
__meta__ = {
"_edit_use_anchors_": false
}

[node name="port" type="LineEdit" parent="panelhost"]
margin_left = 8.12247
margin_top = 107.562
margin_right = 90.1225
margin_bottom = 137.562
custom_fonts/font = SubResource( 8 )
text = "4546"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="maxplayers" type="LineEdit" parent="panelhost"]
margin_left = 8.00623
margin_top = 174.679
margin_right = 90.0062
margin_bottom = 204.679
custom_fonts/font = SubResource( 9 )
text = "6"
max_length = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="create" type="Button" parent="panelhost"]
margin_left = 77.3264
margin_top = 242.737
margin_right = 157.326
margin_bottom = 268.737
custom_fonts/font = SubResource( 10 )
text = "Create"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="paneljoin" type="Panel" parent="."]
margin_left = 837.752
margin_top = 232.961
margin_right = 1083.75
margin_bottom = 327.961
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background_panel" type="Sprite" parent="paneljoin"]
modulate = Color( 0.713726, 0.0470588, 0.0470588, 1 )
position = Vector2( 124.804, 111.805 )
scale = Vector2( 7.87219, 7.28072 )
texture = ExtResource( 3 )

[node name="label_1_joinserver" type="Label" parent="paneljoin"]
margin_left = 65.4455
margin_top = 2.29197
margin_right = 178.445
margin_bottom = 22.292
custom_fonts/font = SubResource( 11 )
text = "Join Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_2_ip" type="Label" parent="paneljoin"]
margin_left = 9.31187
margin_top = 26.7657
margin_right = 49.3119
margin_bottom = 46.7657
custom_fonts/font = SubResource( 12 )
text = "Ip:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_3_port" type="Label" parent="paneljoin"]
margin_left = 10.6902
margin_top = 84.0219
margin_right = 58.6902
margin_bottom = 127.022
custom_fonts/font = SubResource( 13 )
text = "Port:
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="joinip" type="LineEdit" parent="paneljoin"]
margin_left = 10.0
margin_top = 50.0
margin_right = 118.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 14 )
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="joinport" type="LineEdit" parent="paneljoin"]
margin_left = 10.5904
margin_top = 106.99
margin_right = 92.5903
margin_bottom = 136.99
custom_fonts/font = SubResource( 15 )
text = "4546"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join" type="Button" parent="paneljoin"]
margin_left = 100.072
margin_top = 194.556
margin_right = 150.072
margin_bottom = 220.556
custom_fonts/font = SubResource( 16 )
text = "Join"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="RichTextLabel" parent="."]
margin_left = 605.0
margin_top = 72.0
margin_right = 1207.0
margin_bottom = 196.0
custom_fonts/normal_font = SubResource( 17 )
text = "1x1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="please_change_port_text" type="RichTextLabel" parent="."]
modulate = Color( 0, 0.658824, 0.815686, 1 )
margin_left = 537.037
margin_top = 200.272
margin_right = 936.037
margin_bottom = 240.272
custom_fonts/normal_font = SubResource( 18 )
text = "PLEASE, CHANGE PORT NUMBER!"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="panelhost/create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="paneljoin/join" to="." method="_on_join_pressed"]
